# skybazaar

./: Cargo.toml  LICENSE  build.rs
examples/: auctions_fetch_page.rs
src/: hypixel.rs  lib.rs
src/hypixel/: auctions.rs  bazaar.rs  client.rs  items.rs
src/hypixel/auctions/: handler.rs  models.rs
src/hypixel/bazaar/: handler.rs  logic.rs  models.rs
