[package]
name = "skybazaar"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4", "serde"]}
serde = { version = "1.0", features = ["derive"]}
anyhow = "1.0.102"
phf = { version = "0.13.1", features = ["macros"]}

[build-dependencies]
phf_codegen = "0.13.1"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"]}
